Bug 364899 - konversation5 crashes on exit
Summary: konversation5 crashes on exit
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords: drkonqi
: 370637 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-06-29 15:55 UTC by RJVB
Modified: 2016-10-30 16:16 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description RJVB 2016-06-29 15:55:37 UTC
Application: konversation (1.6-master #5004)
 (Compiled from sources)
Qt Version: 5.6.1
Frameworks Version: 5.22.0
Operating System: Linux 4.5.7-ck1-mainline-core2-rjvb x86_64
Distribution: Ubuntu 14.04.4 LTS

-- Information about the crash:
- What I was doing when the application crashed:

I get this crash systematically when I quit konversation, even when I quit it immediately after it is done starting up.

I'm running against Qt 5.6.1 and KF5 5.22.0, everything Qt5/KF5-related installed into /opt/local . Don't be alarmed by the "macports" paths in the backtrace: this *is* under Linux/X11, I just use an adapted version of the build scripts I also use with MacPorts.

The crash can be reproduced every time.

-- Backtrace:
Application: Konversation (konversation), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f19404e6780 (LWP 2608))]

Thread 2 (Thread 0x7f19290c0700 (LWP 2610)):
#0  0x00007f1939156fdd in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007f1935430fe4 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f19354310ec in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f1939d23c6b in QEventDispatcherGlib::processEvents (this=0x7f191c0008c0, flags=...) at /opt/local/var/macports/build/_opt_local_site-ports_aqua_qt5-kde-devel/qt5-kde-devel/work/qt-everywhere-opensource-src-5.6.1/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:419
#4  0x00007f1939cce8fa in QEventLoop::exec (this=this@entry=0x7f19290bfe20, flags=..., flags@entry=...) at /opt/local/var/macports/build/_opt_local_site-ports_aqua_qt5-kde-devel/qt5-kde-devel/work/qt-everywhere-opensource-src-5.6.1/qtbase/src/corelib/kernel/qeventloop.cpp:204
#5  0x00007f1939b06a2c in QThread::exec (this=this@entry=0x7f193a3aa400 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at /opt/local/var/macports/build/_opt_local_site-ports_aqua_qt5-kde-devel/qt5-kde-devel/work/qt-everywhere-opensource-src-5.6.1/qtbase/src/corelib/thread/qthread.cpp:500
#6  0x00007f193a139605 in QDBusConnectionManager::run (this=0x7f193a3aa400 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at /opt/local/var/macports/build/_opt_local_site-ports_aqua_qt5-kde-devel/qt5-kde-devel/work/qt-everywhere-opensource-src-5.6.1/qtbase/src/dbus/qdbusconnection.cpp:189
#7  0x00007f1939b0b669 in QThreadPrivate::start (arg=0x7f193a3aa400 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at /opt/local/var/macports/build/_opt_local_site-ports_aqua_qt5-kde-devel/qt5-kde-devel/work/qt-everywhere-opensource-src-5.6.1/qtbase/src/corelib/thread/qthread_unix.cpp:341
#8  0x00007f1936e93184 in start_thread (arg=0x7f19290c0700) at pthread_create.c:312
#9  0x00007f193916437d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 1 (Thread 0x7f19404e6780 (LWP 2608)):
[KCrash Handler]
#6  QThreadStorageData::get (this=this@entry=0x0) at /opt/local/var/macports/build/_opt_local_site-ports_aqua_qt5-kde-devel/qt5-kde-devel/work/qt-everywhere-opensource-src-5.6.1/qtbase/src/corelib/thread/qthreadstorage.cpp:117
#7  0x00007f193a4ffe58 in qThreadStorage_localData<QGuiGLThreadContext> (d=...) at /opt/local/var/macports/build/_opt_local_site-ports_aqua_qt5-kde-devel/qt5-kde-devel/work/qt-everywhere-opensource-src-5.6.1/qtbase/include/QtCore/../../src/corelib/thread/qthreadstorage.h:65
#8  localData (this=<optimized out>) at /opt/local/var/macports/build/_opt_local_site-ports_aqua_qt5-kde-devel/qt5-kde-devel/work/qt-everywhere-opensource-src-5.6.1/qtbase/include/QtCore/../../src/corelib/thread/qthreadstorage.h:139
#9  QOpenGLContext::currentContext () at /opt/local/var/macports/build/_opt_local_site-ports_aqua_qt5-kde-devel/qt5-kde-devel/work/qt-everywhere-opensource-src-5.6.1/qtbase/src/gui/kernel/qopenglcontext.cpp:415
#10 0x00007f193a4d381c in QSurface::~QSurface (this=0x2ccd3d0, __in_chrg=<optimized out>) at /opt/local/var/macports/build/_opt_local_site-ports_aqua_qt5-kde-devel/qt5-kde-devel/work/qt-everywhere-opensource-src-5.6.1/qtbase/src/gui/kernel/qsurface.cpp:127
#11 0x00007f193a4d1774 in QWindow::~QWindow (this=0x2ccd3c0, __in_chrg=<optimized out>) at /opt/local/var/macports/build/_opt_local_site-ports_aqua_qt5-kde-devel/qt5-kde-devel/work/qt-everywhere-opensource-src-5.6.1/qtbase/src/gui/kernel/qwindow.cpp:203
#12 0x00007f193ad6ab39 in QWidgetWindow::~QWidgetWindow (this=0x2ccd3c0, __in_chrg=<optimized out>) at /opt/local/var/macports/build/_opt_local_site-ports_aqua_qt5-kde-devel/qt5-kde-devel/work/qt-everywhere-opensource-src-5.6.1/qtbase/src/widgets/kernel/qwidgetwindow.cpp:132
#13 0x00007f193ad3b056 in QWidgetPrivate::deleteTLSysExtra (this=this@entry=0x2c66510) at /opt/local/var/macports/build/_opt_local_site-ports_aqua_qt5-kde-devel/qt5-kde-devel/work/qt-everywhere-opensource-src-5.6.1/qtbase/src/widgets/kernel/qwidget.cpp:1890
#14 0x00007f193ad478a8 in QWidget::destroy (this=this@entry=0x2c65c60, destroyWindow=destroyWindow@entry=true, destroySubWindows=destroySubWindows@entry=true) at /opt/local/var/macports/build/_opt_local_site-ports_aqua_qt5-kde-devel/qt5-kde-devel/work/qt-everywhere-opensource-src-5.6.1/qtbase/src/widgets/kernel/qwidget.cpp:12297
#15 0x00007f193ad4ed20 in QWidget::~QWidget (this=0x2c65c60, __in_chrg=<optimized out>) at /opt/local/var/macports/build/_opt_local_site-ports_aqua_qt5-kde-devel/qt5-kde-devel/work/qt-everywhere-opensource-src-5.6.1/qtbase/src/widgets/kernel/qwidget.cpp:1679
#16 0x00007f193ae8a7c9 in QMenu::~QMenu (this=0x2c65c60, __in_chrg=<optimized out>) at /opt/local/var/macports/build/_opt_local_site-ports_aqua_qt5-kde-devel/qt5-kde-devel/work/qt-everywhere-opensource-src-5.6.1/qtbase/src/widgets/widgets/qmenu.cpp:1511
#17 0x00007f1939cfa223 in QObjectPrivate::deleteChildren (this=this@entry=0x2c60170) at /opt/local/var/macports/build/_opt_local_site-ports_aqua_qt5-kde-devel/qt5-kde-devel/work/qt-everywhere-opensource-src-5.6.1/qtbase/src/corelib/kernel/qobject.cpp:1963
#18 0x00007f193ad4ed04 in QWidget::~QWidget (this=0x2c5c940, __in_chrg=<optimized out>) at /opt/local/var/macports/build/_opt_local_site-ports_aqua_qt5-kde-devel/qt5-kde-devel/work/qt-everywhere-opensource-src-5.6.1/qtbase/src/widgets/kernel/qwidget.cpp:1674
#19 0x00007f193ae8a7c9 in QMenu::~QMenu (this=0x2c5c940, __in_chrg=<optimized out>) at /opt/local/var/macports/build/_opt_local_site-ports_aqua_qt5-kde-devel/qt5-kde-devel/work/qt-everywhere-opensource-src-5.6.1/qtbase/src/widgets/widgets/qmenu.cpp:1511
#20 0x000000000056cc31 in IrcContextMenus::~IrcContextMenus (this=0x904580 <(anonymous namespace)::Q_QGS_s_ircContextMenusPrivate::innerFunction()::holder>, __in_chrg=<optimized out>) at /opt/local/var/macports/build/_opt_local_site-ports_kf5_kf5-konversation/kf5-konversation-devel/work/konversation-5/src/viewer/irccontextmenus.cpp:86
#21 0x000000000056cd49 in ~IrcContextMenusPrivate (this=<optimized out>, __in_chrg=<optimized out>) at /opt/local/var/macports/build/_opt_local_site-ports_kf5_kf5-konversation/kf5-konversation-devel/work/konversation-5/src/viewer/irccontextmenus.cpp:64
#22 (anonymous namespace)::Q_QGS_s_ircContextMenusPrivate::Holder::~Holder (this=<optimized out>, __in_chrg=<optimized out>) at /opt/local/var/macports/build/_opt_local_site-ports_kf5_kf5-konversation/kf5-konversation-devel/work/konversation-5/src/viewer/irccontextmenus.cpp:58
#23 0x000000000056cd49 in operator-> (this=<optimized out>)
#24 self () at /opt/local/var/macports/build/_opt_local_site-ports_kf5_kf5-konversation/kf5-konversation-devel/work/konversation-5/src/viewer/irccontextmenus.cpp:95
#25 IrcContextMenus::topicHistoryMenu (pos=..., server=<optimized out>, text=..., author=...) at /opt/local/var/macports/build/_opt_local_site-ports_kf5_kf5-konversation/kf5-konversation-devel/work/konversation-5/src/viewer/irccontextmenus.cpp:791
#26 0x00007f19390a61a9 in __run_exit_handlers (status=0, listp=0x7f19394286c8 <__exit_funcs>, run_list_atexit=run_list_atexit@entry=true) at exit.c:82
#27 0x00007f19390a61f5 in __GI_exit (status=<optimized out>) at exit.c:104
#28 0x00007f193908bf4c in __libc_start_main (main=0x447a50 <main(int, char**)>, argc=1, argv=0x7fff1ae43368, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fff1ae43358) at libc-start.c:321
#29 0x0000000000457a2b in _start ()

Reported using DrKonqi
Comment 1 RJVB 2016-06-30 22:41:41 UTC
Here's the backtrace for the same crash on OS X. NB: the QMenu at 0x00007fb0325edad0 is m_textMenu

Application: Konversation (konversation), signal: Segmentation fault: 11
(lldb) process attach --pid 8255
Process 8255 stopped
Executable module set to "/Applications/MacPorts/KF5/konversation.app/Contents/MacOS/konversation".
Architecture set to: x86_64-apple-macosx.
(lldb) set set term-width 200
(lldb) thread info
thread #1: tid = 0xc5e285, 0x00007fff82f84e20 libsystem_kernel.dylib`__wait4 + 8, queue = 'com.apple.main-thread', stop reason = signal SIGSTOP

(lldb) bt all
* thread #1: tid = 0xc5e285, 0x00007fff82f84e20 libsystem_kernel.dylib`__wait4 + 8, queue = 'com.apple.main-thread', stop reason = signal SIGSTOP
  * frame #0: 0x00007fff82f84e20 libsystem_kernel.dylib`__wait4 + 8
    frame #1: 0x000000010c71dfde libKF5Crash.5.dylib`KCrash::startProcess(int, char const**, bool) [inlined] startProcessInternal(argc=<unavailable>, directly=<unavailable>) + 125 at kcrash.cpp:641
    frame #2: 0x000000010c71df61 libKF5Crash.5.dylib`KCrash::startProcess(argc=<unavailable>, argv=<unavailable>, waitAndExit=<unavailable>) + 17 at kcrash.cpp:623
    frame #3: 0x000000010c71dde9 libKF5Crash.5.dylib`KCrash::defaultCrashHandler(sig=<unavailable>) + 1049 at kcrash.cpp:527
    frame #4: 0x00007fff89c535aa libsystem_platform.dylib`_sigtramp + 26
    frame #5: 0x000000010ec7f507 QtCore`QThreadStorageData::get(this=0x0000000000000000) const + 39 at qthreadstorage.cpp:117
    frame #6: 0x000000010e5104b6 QtGui`QOpenGLContext::currentContext() [inlined] QGuiGLThreadContext*& qThreadStorage_localData<QGuiGLThreadContext>(d=0x0000000000000000) + 8 at qthreadstorage.h:65
    frame #7: 0x000000010e5104ae QtGui`QOpenGLContext::currentContext() [inlined] QThreadStorage<QGuiGLThreadContext*>::localData(this=0x0000000000000000) at qthreadstorage.h:139
    frame #8: 0x000000010e5104ae QtGui`QOpenGLContext::currentContext() + 14 at qopenglcontext.cpp:415
    frame #9: 0x000000010e4e26a9 QtGui`QSurface::~QSurface(this=0x00007fb0326937d0) + 25 at qsurface.cpp:127
    frame #10: 0x000000010e4d9e08 QtGui`QWindow::~QWindow(this=0x00007fb0326937c0) + 72 at qwindow.cpp:207
    frame #11: 0x000000010dc7f36e QtWidgets`QWidgetWindow::~QWidgetWindow() [inlined] QWidgetWindow::~QWidgetWindow(this=0x00007fb0326937c0) + 14 at qwidgetwindow.cpp:131
    frame #12: 0x000000010dc7f369 QtWidgets`QWidgetWindow::~QWidgetWindow(this=0x00007fb0326937c0) + 9 at qwidgetwindow.cpp:131
    frame #13: 0x000000010dc4f9f2 QtWidgets`QWidgetPrivate::deleteTLSysExtra(this=0x00007fb0325f21d0) + 322 at qwidget.cpp:1890
    frame #14: 0x000000010dc4f69e QtWidgets`QWidget::destroy(this=<unavailable>, destroyWindow=<unavailable>, destroySubWindows=<unavailable>) + 830 at qwidget.cpp:12297
    frame #15: 0x000000010dc4ee2e QtWidgets`QWidget::~QWidget(this=0x00007fb0325f1bb0) + 1486 at qwidget.cpp:1679
    frame #16: 0x000000010dd9c5ae QtWidgets`QMenu::~QMenu() [inlined] QMenu::~QMenu(this=0x00007fb0325f1bb0) + 14 at qmenu.cpp:1495
    frame #17: 0x000000010dd9c5a9 QtWidgets`QMenu::~QMenu(this=0x00007fb0325f1bb0) + 9 at qmenu.cpp:1495
    frame #18: 0x000000010ee6b513 QtCore`QObjectPrivate::deleteChildren(this=0x00007fb0325edc50) + 243 at qobject.cpp:1963
    frame #19: 0x000000010dc4ee12 QtWidgets`QWidget::~QWidget(this=0x00007fb0325edad0) + 1458 at qwidget.cpp:1674
    frame #20: 0x000000010dd9c5ae QtWidgets`QMenu::~QMenu() [inlined] QMenu::~QMenu(this=0x00007fb0325edad0) + 14 at qmenu.cpp:1495
    frame #21: 0x000000010dd9c5a9 QtWidgets`QMenu::~QMenu(this=0x00007fb0325edad0) + 9 at qmenu.cpp:1495
    frame #22: 0x000000010c400b96 konversation`IrcContextMenus::~IrcContextMenus() + 38
    frame #23: 0x000000010c406f5a konversation`(anonymous namespace)::Q_QGS_s_ircContextMenusPrivate::innerFunction()::Cleanup::~Cleanup() + 26
    frame #24: 0x00007fff8ab6f7b5 libsystem_c.dylib`__cxa_finalize + 177
    frame #25: 0x00007fff8ab6fa60 libsystem_c.dylib`exit + 22
    frame #26: 0x00007fff86207604 libdyld.dylib`start + 8
    frame #27: 0x00007fff862075fd libdyld.dylib`start + 1

  thread #2: tid = 0xc5e286, 0x00007fff82f85662 libsystem_kernel.dylib`kevent64 + 10, queue = 'com.apple.libdispatch-manager'
    frame #0: 0x00007fff82f85662 libsystem_kernel.dylib`kevent64 + 10
    frame #1: 0x00007fff8b8e5421 libdispatch.dylib`_dispatch_mgr_invoke + 239
    frame #2: 0x00007fff8b8e5136 libdispatch.dylib`_dispatch_mgr_thread + 52

  thread #3: tid = 0xc5e287, 0x00007fff82f84e6a libsystem_kernel.dylib`__workq_kernreturn + 10
    frame #0: 0x00007fff82f84e6a libsystem_kernel.dylib`__workq_kernreturn + 10
    frame #1: 0x00007fff84d45f08 libsystem_pthread.dylib`_pthread_wqthread + 330
    frame #2: 0x00007fff84d48fb9 libsystem_pthread.dylib`start_wqthread + 13

  thread #4: tid = 0xc5e2a1, 0x00007fff82f84e6a libsystem_kernel.dylib`__workq_kernreturn + 10
    frame #0: 0x00007fff82f84e6a libsystem_kernel.dylib`__workq_kernreturn + 10
    frame #1: 0x00007fff84d45f08 libsystem_pthread.dylib`_pthread_wqthread + 330
    frame #2: 0x00007fff84d48fb9 libsystem_pthread.dylib`start_wqthread + 13

  thread #5: tid = 0xc5e2a5, 0x00007fff82f849aa libsystem_kernel.dylib`__select + 10, name = 'QDBusConnectionManager'
    frame #0: 0x00007fff82f849aa libsystem_kernel.dylib`__select + 10
    frame #1: 0x000000010ee95244 QtCore`qt_safe_select(nfds=8, fdread=0x00007fb031139998, fdwrite=0x00007fb031139c28, fdexcept=0x00007fb031139eb8, orig_timeout=<unavailable>) + 564 at qcore_unix.cpp:75
    frame #2: 0x000000010ee963c9 QtCore`QEventDispatcherUNIXPrivate::doSelect(this=0x00007fb031139800, timeout=<unavailable>, flags=<unavailable>) + 665 at qeventdispatcher_unix.cpp:192
    frame #3: 0x000000010ee974ee QtCore`QEventDispatcherUNIX::processEvents(this=0x00007fb03222d2d0, flags=<unavailable>) + 222 at qeventdispatcher_unix.cpp:607
    frame #4: 0x000000010ee3ba21 QtCore`QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) [inlined] QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 401 at qeventloop.cpp:128
    frame #5: 0x000000010ee3ba04 QtCore`QEventLoop::exec(this=0x0000000116ab1e28, flags=<unavailable>) + 372 at qeventloop.cpp:204
    frame #6: 0x000000010ec7c705 QtCore`QThread::exec(this=<unavailable>) + 117 at qthread.cpp:500
    frame #7: 0x000000010eb91b63 QtDBus`QDBusConnectionManager::run(this=0x00007fb03068a4a0) + 19 at qdbusconnection.cpp:189
    frame #8: 0x000000010ec8010b QtCore`QThreadPrivate::start(arg=0x00007fb03068a4a0) + 363 at qthread_unix.cpp:341
    frame #9: 0x00007fff84d44899 libsystem_pthread.dylib`_pthread_body + 138
    frame #10: 0x00007fff84d4472a libsystem_pthread.dylib`_pthread_start + 137
    frame #11: 0x00007fff84d48fc9 libsystem_pthread.dylib`thread_start + 13

  thread #6: tid = 0xc5e2ae, 0x00007fff82f80a1a libsystem_kernel.dylib`mach_msg_trap + 10
    frame #0: 0x00007fff82f80a1a libsystem_kernel.dylib`mach_msg_trap + 10
    frame #1: 0x00007fff82f7fd18 libsystem_kernel.dylib`mach_msg + 64
    frame #2: 0x00007fff8715ef15 CoreFoundation`__CFRunLoopServiceMachPort + 181
    frame #3: 0x00007fff8715e539 CoreFoundation`__CFRunLoopRun + 1161
    frame #4: 0x00007fff8715de75 CoreFoundation`CFRunLoopRunSpecific + 309
    frame #5: 0x00007fff8cc0f05e AppKit`_NSEventThread + 144
    frame #6: 0x00007fff84d44899 libsystem_pthread.dylib`_pthread_body + 138
    frame #7: 0x00007fff84d4472a libsystem_pthread.dylib`_pthread_start + 137
    frame #8: 0x00007fff84d48fc9 libsystem_pthread.dylib`thread_start + 13

  thread #7: tid = 0xc5e2b3, 0x00007fff82f849aa libsystem_kernel.dylib`__select + 10, name = 'com.apple.CFSocket.private'
    frame #0: 0x00007fff82f849aa libsystem_kernel.dylib`__select + 10
    frame #1: 0x00007fff871aaa03 CoreFoundation`__CFSocketManager + 867
    frame #2: 0x00007fff84d44899 libsystem_pthread.dylib`_pthread_body + 138
    frame #3: 0x00007fff84d4472a libsystem_pthread.dylib`_pthread_start + 137
    frame #4: 0x00007fff84d48fc9 libsystem_pthread.dylib`thread_start + 13

  thread #8: tid = 0xc5e2bb, 0x00007fff82f84e6a libsystem_kernel.dylib`__workq_kernreturn + 10
    frame #0: 0x00007fff82f84e6a libsystem_kernel.dylib`__workq_kernreturn + 10
    frame #1: 0x00007fff84d45f08 libsystem_pthread.dylib`_pthread_wqthread + 330
    frame #2: 0x00007fff84d48fb9 libsystem_pthread.dylib`start_wqthread + 13

  thread #9: tid = 0xc5e41a, 0x00007fff82f84e6a libsystem_kernel.dylib`__workq_kernreturn + 10
    frame #0: 0x00007fff82f84e6a libsystem_kernel.dylib`__workq_kernreturn + 10
    frame #1: 0x00007fff84d45f08 libsystem_pthread.dylib`_pthread_wqthread + 330
    frame #2: 0x00007fff84d48fb9 libsystem_pthread.dylib`start_wqthread + 13
(lldb) detach
Process 8255 detached
Comment 2 quazgar 2016-07-06 15:47:24 UTC
I can confirm this crash (upon quitting Konversation) with Debian testing.

Version 1.6
Using:
KDE Frameworks 5.22.0
Qt 5.6.1 (built against 5.5.1)
The xcb windowing system

Thread 1 "konversation" received signal SIGSEGV, Segmentation fault.
0x00007ffff1b11d9b in QThreadStorageData::get() const () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5

(gdb) thread 1
[Switching to thread 1 (Thread 0x7fffe4671940 (LWP 17892))]
#0  0x00007ffff1b11d9b in QThreadStorageData::get() const () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
(gdb) bt
#0  0x00007ffff1b11d9b in QThreadStorageData::get() const () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#1  0x00007ffff20fc918 in QOpenGLContext::currentContext() () from /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#2  0x00007ffff20cebcc in QSurface::~QSurface() () from /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#3  0x00007ffff20cc9b1 in QWindow::~QWindow() () from /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#4  0x00007ffff2707319 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#5  0x00007ffff26d58c6 in QWidgetPrivate::deleteTLSysExtra() () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#6  0x00007ffff26e2f10 in QWidget::destroy(bool, bool) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#7  0x00007ffff26ea8d0 in QWidget::~QWidget() () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#8  0x00007ffff2830c59 in QMenu::~QMenu() () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#9  0x00007ffff1d12ea3 in QObjectPrivate::deleteChildren() () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#10 0x00007ffff26ea8b4 in QWidget::~QWidget() () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#11 0x00007ffff2830c59 in QMenu::~QMenu() () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#12 0x00000000005ef911 in IrcContextMenus::~IrcContextMenus() ()
#13 0x00000000005ef999 in ?? ()
#14 0x00007ffff0e63de8 in __run_exit_handlers (status=0, listp=0x7ffff11cc5f8 <__exit_funcs>, run_list_atexit=run_list_atexit@entry=true) at exit.c:82
#15 0x00007ffff0e63e35 in __GI_exit (status=<optimized out>) at exit.c:104
#16 0x00007ffff0e4e5f7 in __libc_start_main (main=0x4dd700 <main>, argc=1, argv=0x7fffffffd6f8, init=<optimized out>, fini=<optimized out>,
    rtld_fini=<optimized out>, stack_end=0x7fffffffd6e8) at libc-start.c:325
#17 0x00000000004edf29 in _start ()
Comment 3 Peter Simonsson 2016-09-09 19:04:20 UTC
Git commit 83f3fc4322bb6c0c6fc4a155c09c6b6d864f8bb0 by Peter Simonsson.
Committed on 09/09/2016 at 19:03.
Pushed by psn into branch 'master'.

Fix crash on close if the nick menu has been shown

M  +4    -2    src/viewer/irccontextmenus.cpp

http://commits.kde.org/konversation/83f3fc4322bb6c0c6fc4a155c09c6b6d864f8bb0
Comment 4 RJVB 2016-09-12 11:59:15 UTC
Reopening as not fixed at all, or broken anew.
Comment 5 Peter Simonsson 2016-09-13 15:51:19 UTC
Git commit fcafafb5dbd3eff58f0d10282f88525a6e06c640 by Peter Simonsson.
Committed on 13/09/2016 at 15:50.
Pushed by psn into branch 'master'.

Fix crash on quit
Related: bug 368682

M  +2    -1    src/viewer/irccontextmenus.cpp

http://commits.kde.org/konversation/fcafafb5dbd3eff58f0d10282f88525a6e06c640
Comment 6 Peter Simonsson 2016-10-30 16:16:42 UTC
*** Bug 370637 has been marked as a duplicate of this bug. ***