Fix crash on close if the nick menu has been shown

BUG:364899